<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f1f1f1"
    tools:context=".MainActivity">
    <!-- Previous inputs -->
    <TextView
        android:id="@+id/calculations"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="10sp"
        android:layout_weight="1"
        android:textSize="24sp"
        android:textColor="#000"
        android:textStyle="bold"
        android:gravity="bottom|right"
        />
    <!-- Current input -->
    <TextView
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="0"
        android:padding="10sp"
        android:textSize="24sp"
        android:textColor="#000"
        android:textStyle="bold"
        android:gravity="bottom|right"
        />
    <!-- Precentage, Clear Entry, Clear, and Backspace buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/percentage"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80sp"
            android:backgroundTint="#f8f8f8"
            android:layout_margin="7sp"
            android:textColor="#000"
            android:textSize="20sp"
            android:text="@string/percentage"/>
        <Button
            android:id="@+id/clearEntry"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80sp"
            android:backgroundTint="#f8f8f8"
            android:layout_margin="7sp"
            android:textColor="#000"
            android:textSize="20sp"
            android:text="@string/clearEntry"/>
        <Button
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80sp"
            android:backgroundTint="#f8f8f8"
            android:layout_margin="7sp"
            android:textColor="#000"
            android:textSize="20sp"
            android:text="@string/clear"/>
        <ImageButton
            android:id="@+id/backspace"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80sp"
            android:backgroundTint="#f8f8f8"
            android:layout_margin="7sp"
            android:textColor="#000"
            android:textSize="20sp"
            android:src="@drawable/backspace"
            android:padding="25dp"
            android:scaleType="fitCenter"/>
    </LinearLayout>
    <!-- Divided by X, X squared, Square root of X, and Divide Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/divideByX"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80sp"
            android:backgroundTint="#f8f8f8"
            android:layout_margin="7sp"
            android:textColor="#000"
            android:textSize="20sp"
            android:text="@string/divideByX"/>
        <Button
            android:id="@+id/square"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80sp"
            android:backgroundTint="#f8f8f8"
            android:layout_margin="7sp"
            android:textColor="#000"
            android:textSize="20sp"
            android:text="@string/square"/>
        <Button
            android:id="@+id/squareRoot"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80sp"
            android:backgroundTint="#f8f8f8"
            android:layout_margin="7sp"
            android:textColor="#000"
            android:textSize="20sp"
            android:text="@string/squareRoot"/>
        <Button
            android:id="@+id/divide"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80sp"
            android:backgroundTint="#f8f8f8"
            android:layout_margin="7sp"
            android:textColor="#000"
            android:textSize="20sp"
            android:text="@string/divide"/>
    </LinearLayout>
    <!-- Number buttons (7,8,9) and multiply button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80sp"
            android:backgroundTint="#fff"
            android:layout_margin="7sp"
            android:textColor="#000"
            android:textSize="20sp"
            android:text="7"/>
        <Button
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80sp"
            android:backgroundTint="#fff"
            android:layout_margin="7sp"
            android:textColor="#000"
            android:textSize="20sp"
            android:text="8"/>
        <Button
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80sp"
            android:backgroundTint="#fff"
            android:layout_margin="7sp"
            android:textColor="#000"
            android:textSize="20sp"
            android:text="9"/>
        <Button
            android:id="@+id/multiply"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80sp"
            android:backgroundTint="#f8f8f8"
            android:layout_margin="7sp"
            android:textColor="#000"
            android:textSize="20sp"
            android:text="@string/multiply"/>
    </LinearLayout>
    <!-- Number buttons (4,5,6) and substract button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80sp"
            android:backgroundTint="#fff"
            android:layout_margin="7sp"
            android:textColor="#000"
            android:textSize="20sp"
            android:text="4"/>
        <Button
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80sp"
            android:backgroundTint="#fff"
            android:layout_margin="7sp"
            android:textColor="#000"
            android:textSize="20sp"
            android:text="5"/>
        <Button
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80sp"
            android:backgroundTint="#fff"
            android:layout_margin="7sp"
            android:textColor="#000"
            android:textSize="20sp"
            android:text="6"/>
        <Button
            android:id="@+id/subtract"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80sp"
            android:backgroundTint="#f8f8f8"
            android:layout_margin="7sp"
            android:textColor="#000"
            android:textSize="20sp"
            android:text="@string/subtract"/>
    </LinearLayout>
    <!-- Number buttons (1,2,3) and add button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80sp"
            android:backgroundTint="#fff"
            android:layout_margin="7sp"
            android:textColor="#000"
            android:textSize="20sp"
            android:text="1"/>
        <Button
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80sp"
            android:backgroundTint="#fff"
            android:layout_margin="7sp"
            android:textColor="#000"
            android:textSize="20sp"
            android:text="2"/>
        <Button
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80sp"
            android:backgroundTint="#fff"
            android:layout_margin="7sp"
            android:textColor="#000"
            android:textSize="20sp"
            android:text="3"/>
        <Button
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80sp"
            android:backgroundTint="#f8f8f8"
            android:layout_margin="7sp"
            android:textColor="#000"
            android:textSize="20sp"
            android:text="@string/add"/>
    </LinearLayout>
    <!-- Number button (0), change sign button, dot button and equals button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/changeSign"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="7sp"
            android:layout_marginBottom="0sp"
            android:layout_weight="1"
            android:backgroundTint="#fff"
            android:text="@string/changeSign"
            android:textColor="#000"
            android:textSize="20sp" />
        <Button
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80sp"
            android:backgroundTint="#fff"
            android:layout_margin="7sp"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_marginBottom="0sp"
            android:text="0"/>
        <Button
            android:id="@+id/dot"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80sp"
            android:backgroundTint="#fff"
            android:layout_margin="7sp"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_marginBottom="0sp"
            android:text="@string/dot"/>
        <Button
            android:id="@+id/equals"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80sp"
            android:backgroundTint="#005096"
            android:layout_margin="7sp"
            android:textColor="#fff"
            android:textSize="20sp"
            android:layout_marginBottom="0sp"
            android:text="@string/equals"/>
    </LinearLayout>
    <!-- Empty container to prevent overflow of the most bottom row -->
    <LinearLayout
        android:layout_width="10sp"
        android:layout_height="10sp"
        android:orientation="horizontal" />
</LinearLayout>